RESOLVED FIXED145801
REGRESSION (r184895): Vertical border elements ([-webkit]-border-image set to 'repeat') that used to render perfectly are now rendering incorrectly.
https://bugs.webkit.org/show_bug.cgi?id=145801
Summary REGRESSION (r184895): Vertical border elements ([-webkit]-border-image set to...
Richard Hallas
Reported 2015-06-09 09:14:13 PDT
Created attachment 254571 [details] Screenshot shows the described bug; WebKit is shown to the left, with the same page shown in the current release of Safari to the right. Please visit http://www.careyblyton.com/ and look at the right of the page. The 'Quick links' column is separated from the main body of the page by a vertical rule-off comprised of alternating solid blue/pink blocks. The vertical rule-off should look exactly the same as similar horizontal rule-offs elsewhere on the page, but rotated vertically. The vertical rule-off is generated by border-image (with a fallback to -webkit-border-image) with 'repeat' enabled. In the current release version of WebKit (i.e. Safari 8.0.6 on Mac OS X 10.10.3 and other current WebKit-based browsers), this border image renders perfectly. However, in the current WebKit Nightly build, the rendering is seriously broken: the border image appears to be scaled rather than repeated, such that the single graphic component (which should repeat) is stretched to the height of the border, and the width of the graphic is also significantly too wide.
Attachments
Screenshot shows the described bug; WebKit is shown to the left, with the same page shown in the current release of Safari to the right. (410.17 KB, image/png)
2015-06-09 09:14 PDT, Richard Hallas
no flags
Patch (11.13 KB, patch)
2015-06-10 12:11 PDT, Said Abou-Hallawa
no flags
Patch (11.38 KB, patch)
2015-06-10 15:10 PDT, Said Abou-Hallawa
no flags
Patch (11.37 KB, patch)
2015-06-10 15:59 PDT, Said Abou-Hallawa
no flags
Simon Fraser (smfr)
Comment 1 2015-06-09 10:00:38 PDT
Radar WebKit Bug Importer
Comment 2 2015-06-09 10:00:42 PDT
Said Abou-Hallawa
Comment 3 2015-06-10 12:11:06 PDT
Said Abou-Hallawa
Comment 4 2015-06-10 15:10:30 PDT
Said Abou-Hallawa
Comment 5 2015-06-10 15:48:37 PDT
Comment on attachment 254682 [details] Patch The last patch cleans up the test files.
WebKit Commit Bot
Comment 6 2015-06-10 15:50:15 PDT
Comment on attachment 254682 [details] Patch Rejecting attachment 254682 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 254682, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/5497847772348416
Said Abou-Hallawa
Comment 7 2015-06-10 15:59:12 PDT
Said Abou-Hallawa
Comment 8 2015-06-10 15:59:35 PDT
Comment on attachment 254687 [details] Patch Fixed the change logs.
WebKit Commit Bot
Comment 9 2015-06-10 16:51:07 PDT
Comment on attachment 254687 [details] Patch Clearing flags on attachment: 254687 Committed r185438: <http://trac.webkit.org/changeset/185438>
WebKit Commit Bot
Comment 10 2015-06-10 16:51:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.